creates self referential model for friends

--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,21 +1,22 @@
 <div class='dashboard'>
-    <h3>Welcome <%=current_user.username%>'s Events</h3>
+    <h3>Welcome
+        <%=current_user.username%>'s Events</h3>
 
     <div class='display'>
 
         <section class='events-container'>
             <div id='events'>
                 <% if @event_presenter.empty? %>
-                  <div class="no-events-message">You have not yet created any events or signed up to attend any events.</div>
-                <% end %>
-                <% @event_presenter.each do |event| %>
-                    <div class="event <%= event.get_identifiers %>">
-                        <%= link_to event.name, event_path(event.event_id) %>
-                            <div class="date">
-                                <%= event.date.strftime("%a %d %b %Y") %>
-                            </div>
-                    </div>
+                    <div class="no-events-message">You have not yet created any events or signed up to attend any events.</div>
                     <% end %>
+                        <% @event_presenter.each do |event| %>
+                            <div class="event <%= event.get_identifiers %>">
+                                <%= link_to event.name, event_path(event.event_id) %>
+                                    <div class="date">
+                                        <%= event.date.strftime("%a %d %b %Y") %>
+                                    </div>
+                            </div>
+                            <% end %>
             </div>
         </section>
         <aside class='event-filters'>
@@ -24,9 +25,13 @@
             <div class="filter-divider"></div>
             <h4 id="attending">Attending</h4>
             <h4 id="hosting">Hosting</h4>
+            <div class="filter-divider"></div>
+            <h4>
+                <%=link_to "Friends", users_friends_path%>
+            </h4>
         </aside>
     </div>
 </div>
 
 <%=javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"%>
-<%= javascript_include_tag "dashboard/dashboard_filter" %>
+    <%= javascript_include_tag "dashboard/dashboard_filter" %>
