--- a/app/assets/stylesheets/sections/_dashboard.scss
+++ b/app/assets/stylesheets/sections/_dashboard.scss
@@ -21,6 +21,33 @@
         display: flex;
         justify-content: center;
     }
+    .friend-list {
+        display: flex;
+        flex-direction: column;
+        width: 8%;
+        // height: 220px;
+        background-color: #ffffff;
+        margin-right: 20px;
+        border-radius: 10px;
+        h2 {
+            font-size: 20px;
+            text-align: center;
+            border-bottom: 1px solid black;
+            padding: 10px;
+            ;
+        }
+        p {
+            text-align: center;
+            border-top: 1px solid black;
+            padding: 10px;
+            a {
+                font-size: 15px
+            }
+            a:hover {
+                color: darkgray;
+            }
+        }
+    }
     .events-container {
         width: 50%;
         height: 400px;
@@ -32,10 +59,17 @@
         display: flex;
         flex-direction: column;
         width: 8%;
-        height: 220px;
+        height: 280px;
         background-color: #ffffff;
         margin-left: 20px;
         border-radius: 10px;
+        h2 {
+            font-size: 20px;
+            text-align: center;
+            // text-decoration: underline;
+            padding: 10px;
+            ;
+        }
     }
     .event-filters-past {
         display: flex;
@@ -45,36 +79,36 @@
         background-color: #ffffff
     }
     .event {
-      display: flex;
-      justify-content: space-between;
-      padding-top: 20px;
-      padding-left: 10px;
-      height: 40px;
-      border-bottom: 1px solid black;
-      width: 90%;
-      margin-right: auto;
-      margin-left: auto;
+        display: flex;
+        justify-content: space-between;
+        padding-top: 20px;
+        padding-left: 10px;
+        height: 40px;
+        border-bottom: 1px solid black;
+        width: 90%;
+        margin-right: auto;
+        margin-left: auto;
     }
     .date {
-      padding-right: 10px;
+        padding-right: 10px;
     }
     .selected {
-      font-weight: 900;
+        font-weight: 900;
     }
     .filter-divider {
-      border-bottom: .05em solid black;
-      width: 80%;
-      margin-right: auto;
-      margin-left: auto;
+        border-bottom: .05em solid black;
+        width: 80%;
+        margin-right: auto;
+        margin-left: auto;
     }
     .no-events-message {
-      display: flex;
-      justify-content: center;
-      padding-top: 20px;
-      padding-left: 10px;
-      height: 40px;
-      width: 90%;
-      margin-right: auto;
-      margin-left: auto;
+        display: flex;
+        justify-content: center;
+        padding-top: 20px;
+        padding-left: 10px;
+        height: 40px;
+        width: 90%;
+        margin-right: auto;
+        margin-left: auto;
     }
 }
