--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,8 +1,22 @@
 <div class='dashboard'>
     <h3>Welcome
-        <%=current_user.username%>'s Events</h3>
+        <%=current_user.username%>
+    </h3>
 
     <div class='display'>
+        <aside class='friend-list'>
+            <h2>
+                Friends
+            </h2>
+            <% current_user.friends.limit(5).each do |friend| %>
+                <h4>
+                    <%= friend.username %>
+                </h4>
+                <%end%>
+                    <p>
+                        <%=link_to "All Friends...", users_friends_path%>
+                    </p>
+        </aside>
 
         <section class='events-container'>
             <div id='events'>
@@ -19,16 +33,16 @@
                             <% end %>
             </div>
         </section>
+
         <aside class='event-filters'>
+            <h2>Event Filters</h2>
+            <div class="filter-divider"></div>
             <h4 id="upcoming" class="selected">Upcoming</h4>
             <h4 id="past">Past</h4>
             <div class="filter-divider"></div>
             <h4 id="attending">Attending</h4>
             <h4 id="hosting">Hosting</h4>
             <div class="filter-divider"></div>
-            <h4>
-                <%=link_to "Friends", users_friends_path%>
-            </h4>
         </aside>
     </div>
 </div>
