--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,13 +1,12 @@
-<div class="user-profile-edit">
-  <%= image_tag("#{current_user.avatar}") %>
-  <div class="information">
-  <br>
-    Upload profile photo
-  </div>
-  <div class="upload">
-    <%= form_for current_user do |f| %>
-      <%= render partial: 'pictures/form_for_one', :locals => { f: f, object: current_user } %>
-      <%= f.submit %>
-    <% end %>
-  </div>
+<div class="user-profile">
+    <%= image_tag("#{current_user.avatar}", class: "avatar") %>
+        <div class="information">
+            <br> Upload profile photo
+        </div>
+        <div class="upload">
+            <%= form_for current_user do |f| %>
+                <%= render partial: 'pictures/form_for_one', :locals => { f: f, object: current_user } %>
+                    <%= f.submit 'Add Image' %>
+                        <% end %>
+        </div>
 </div>
