--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,15 @@
 <div class="user-profile">
-  <%= image_tag("#{current_user.avatar}", size: "30") %>
-  <br></br>
+  <%= image_tag("#{current_user.avatar}", class: "avatar", size: "30") %>
   <div class="information">
-    <%= current_user.username %>
-    <br></br>
-    <%= current_user.email %> <br>
-    <br>
+    <p><%= current_user.username %></p>
+     <p><%= current_user.email %> </p>
   </div>
-  <%= link_to 'Edit Settings', edit_user_path(current_user) %>
-</div>
-<div class="img-fitbit">
-  <%= link_to "https://www.fitbit.com/oauth2/authorize?response_type=token&client_id=#{ENV['fitbit_oauth_client_id']}&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Fauth%2Ffitbit%2Fcallback&scope=activity%20heartrate%20location%20profile%20settings%20weight&expires_in=604800" do %>
-  <% image_tag '/assets/fitbit_logo.png', width: 600, height: 760, alt: ''%>
-  <% end %>
+  <%= link_to 'Add Image', edit_user_path(current_user), class:'edit-settings' %>
+
+  <div class="fitbit-link">
+  <h3> Sign in with Fitbit to track your activities:</h3>
+    <%= link_to "https://www.fitbit.com/oauth2/authorize?response_type=token&client_id=#{ENV['fitbit_oauth_client_id']}&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Fauth%2Ffitbit%2Fcallback&scope=activity%20heartrate%20location%20profile%20settings%20weight&expires_in=604800" do %>
+      <% image_tag '/assets/fitbit_logo.png', class: 'fb-logo', alt: 'fit-bit logo'%>
+    <% end %>
+  </div>
 </div>
